compiler/tests/fixtures/invalid/semantics/spawn_role_with_pool.viv
// Invalid: spawn role with pool directive

action bad-spawn-pool:
    roles:
        @actor:
            as: initiator
        @thing:
            as: item, spawn
            spawn: ~createItem("widget")
            from: @actor.inventory
